@@ -1,3 +1,9 @@
+2004-05-29  Dan Dennedy <dan@dennedy.org>
+	* configure.ac, libdv.pc.in: remove gtk from libdv pkg-config dependencies
+	  as the core lib has not required glib for some time now!
+	* encodedv/dvconnect.c: disable paging for dvconnect's internal buffers
+	  (patch from Daniel Kobras)
+
 2004-05-13  Dan Dennedy <dan@dennedy.org>
 	* libdv/dv.c: add another IEC widescreen code to dv_format_wide().
 
